<resources>
    <string name="app_name">Bocom</string>
    <string name="google_api_key">AIzaSyCcIo6qhalYpLREhaMEIoBDRqiXZMUzWVo</string>
    <string name="logo_petroleum">Logo Bocom Petroleum</string>
    <string name="loading">Chargement &#8230;</string>
    <string name="you_mustgrant_permission">Vous devez Autoriser l\'access a votre position</string>
    <string name="save_station">Geo Localiser une Station</string>
    <string name="bocom_petroleum">Bocom Petroleum</string>
    <string name="login">Connexion</string>
    <string name="username">Nom D\'utilisateur</string>
    <string name="passowrd">Mot de Passe</string>
    <string name="show_pwd">Montrer Mot de Passe</string>
    <string name="forgot">Mot de Passe Oublie?</string>
    <string name="please_wait">Veuillez Patienter</string>
    <string name="vide"> </string>
    <string name="copyright">\u00a9 2018</string>
    <string name="softinovplus"> SOFTINOV +</string>
    <string name="hide_pwd">Cacher Mot de Passe</string>
    <string name="station_geolocation">Geo Localiser Une Station</string>
    <string name="station_name">Nom de la Station</string>
    <string name="station_address">Adresse</string>
    <string name="station_phone">Numero de Telephone</string>
    <string name="search_hint">Entrer une Station</string>
    <string name="station_list">Liste des Stations</string>
    <string name="non">Non</string>
    <string name="yes">Oui</string>
    <string name="title_activity_product_list">ProductList</string>
    <string name="product_list">Liste des Produits</string>
    <string name="insert_product_name">Entrer le nom d\'un produit</string>
    <string name="insert_service_name">Entrer le Nom d\'un service</string>
    <string name="rechercher_station_par_produit">Chercher Station Par Produit</string>
    <string name="nos_services">Nos Services</string>
    <string name="nous_contacter">Nous Contacter</string>
    <string name="devise_petroleum">Nous croyons en ce que nous faisons !</string>
    <string name="rue">Rue: </string>
    <string name="rue_petroleum">1460, Boulevard de la République</string>
    <string name="bp">B.P.: </string>
    <string name="bp_petroleum">12262 Douala - Cameroun</string>
    <string name="telephone">Telephone: </string>
    <string name="telephone_petroleum">(237) 233 43 48 44</string>
    <string name="fax">Fax: </string>
    <string name="fax_petroleum">(237) 233 43 48 45</string>
    <string name="email">Email: </string>
    <string name="email_petroleum">bocompetroleum@groupebocom.com</string>
    <string name="bocom_petroleum_sa">BOCOM Petrleum s.a</string>
    <string name="bocom_petroleum_activite">Societe de Distribution des Produits Petroliers</string>
    <string name="bocom_international">BOCOM INTERNATIONAL</string>
    <string name="bocom_international_activite">Une entreprise citoyenne au service de l\'environnement</string>
    <string name="rue_international">MAGZI Bonabéri Douala</string>
    <string name="bp_international">9546 MAGZI Bonabéri Douala </string>
    <string name="telephone_international">(237) 696 63 00 43</string>
    <string name="fax_international">(237) 233 43 48 45</string>
    <string name="email_internactional">bocominternational@groupebocom.com</string>
    <string name="contact_commercial_international">698 00 28 96 / 699 31 22 30 / 698 00 30 34 / 699 31 22 52</string>
    <string name="contact_commercial">Contacts commerciaux: </string>
    <string name="terms_of_use">condition d\'utilisation</string>
</resources>
