<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/logo_content"
        android:gravity="center_horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="0dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-92dp"
                android:layout_marginBottom="-95dp"
                android:src="@drawable/logo_petroleum"
                android:contentDescription="@string/app_name"
                />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_below="@id/logo_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nous_contacter"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:id="@+id/soustitre"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_below="@id/soustitre"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="30dp"
                >


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/bocom_petroleum_sa"
                    android:text="@string/bocom_petroleum_sa"
                    android:textColor="@color/bocomColor"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/bocom_petroleum_activite"
                    android:text="@string/bocom_petroleum_activite"
                    android:textColor="@color/bocomColor"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:gravity="center"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/devise_petroleum"
                    android:text="@string/devise_petroleum"
                    android:textSize="15sp"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:gravity="center"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/rue"
                        android:textSize="13sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rue_petroleum"
                        android:textColor="@color/colorPrimary"
                        android:textSize="13sp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/bp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="13sp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bp_petroleum"
                        android:textColor="@color/colorPrimary"
                        android:textSize="13sp"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/telephone"
                        android:textColor="@color/colorPrimary"
                        android:textSize="13sp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/telephone_petroleum"
                        android:textColor="@color/colorPrimary"
                        android:textSize="13sp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/fax"
                        android:textColor="@color/colorPrimary"
                        android:textSize="13sp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fax_petroleum"
                        android:textColor="@color/colorPrimary"
                        android:textSize="13sp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/email"
                        android:textColor="@color/colorPrimary"
                        android:textSize="13sp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email_petroleum"
                        android:textColor="@color/colorPrimary"
                        android:textSize="13sp"
                        />
                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/bocomColor"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/logointernational"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/bocom_international"
                    android:text="@string/bocom_international"
                    android:textColor="@color/bocomColor"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/bocom_international_activite"
                    android:text="@string/bocom_international_activite"
                    android:textColor="@color/bocomColor"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:gravity="center"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/devise_international"
                    android:text="@string/devise_petroleum"
                    android:textSize="15sp"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:gravity="center"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/rue"
                        android:textSize="13sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rue_international"
                        android:textColor="@color/colorPrimary"
                        android:textSize="13sp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/bp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="13sp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bp_international"
                        android:textColor="@color/colorPrimary"
                        android:textSize="13sp"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/telephone"
                        android:textColor="@color/colorPrimary"
                        android:textSize="13sp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/telephone_international"
                        android:textColor="@color/colorPrimary"
                        android:textSize="13sp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/fax"
                        android:textColor="@color/colorPrimary"
                        android:textSize="13sp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fax_international"
                        android:textColor="@color/colorPrimary"
                        android:textSize="13sp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/email"
                        android:textColor="@color/colorPrimary"
                        android:textSize="13sp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email_internactional"
                        android:textColor="@color/colorPrimary"
                        android:textSize="13sp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/contact_commercial"
                        android:textColor="@color/colorPrimary"
                        android:textSize="13sp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_commercial_international"
                        android:textColor="@color/colorPrimary"
                        android:textSize="13sp"
                        />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/bocomColor"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"/>
            </LinearLayout>
        </RelativeLayout>



    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_margin="-5dp"
        android:gravity="center"
        android:background="@color/colorPrimaryDark"
        android:paddingBottom="3dp"
        android:paddingTop="3dp">
        <TextView
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/copyright"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimaryDark"
            />
        <TextView
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/softinovplus"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimaryDark"
            android:id="@+id/softinovplus"
            android:layout_marginLeft="5px"
            />

    </LinearLayout>

</RelativeLayout>
